force-app/main/default/objects/skilljar__Training_Credit_Code__c/skilljar__Training_Credit_Code__c.object-meta.xml
<CustomObject>
    <label>Training Credit Code</label>
    <nameField>
        <label>Training Credit Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Credit Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>