force-app/main/default/objects/skilljar__Training_Credit_Code__c/fields/skilljar__Available_For_All_Offers__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Available_For_All_Offers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available For All Offers</label>
    <type>Checkbox</type>
</CustomField>