force-app/main/default/objects/skilljar__Training_Credit_Code__c/fields/skilljar__Available_To_All_Students__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Available_To_All_Students__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available To All Students</label>
    <type>Checkbox</type>
</CustomField>