force-app/main/default/objects/skilljar__Training_Credit_Code__c/fields/skilljar__Code__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Code__c</fullName>
    <label>Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>