force-app/main/default/objects/skilljar__Training_Credit_Code__c/fields/skilljar__Credits_Total__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Credits_Total__c</fullName>
    <label>Credits Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>