force-app/main/default/objects/skilljar__Training_Credit_Code__c/fields/skilljar__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>