force-app/main/default/objects/skilljar__Training_Credit_Code__c/fields/skilljar__Expire_Content__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Expire_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expire Content</label>
    <type>Checkbox</type>
</CustomField>