force-app/main/default/objects/skilljar__Training_Credit_Code__c/fields/skilljar__Tracking_Identifier__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Tracking_Identifier__c</fullName>
    <label>Tracking Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>